# dijkstra_algorithm

./:  config.py  .gitignore  README.md  pyproject.toml
dijkstra_algorithm/: dijkstra_strategy.py  main.py  naive_realization.py  set_realisation.py
dijkstra_algorithm/functions/: get_min_node.py  make_matrix.py
dijkstra_algorithm/work_with_data/: create_chart.py  generate_data.py  measure_time.py
dijkstra_algorithm/work_with_data/load_testing_mesurenets/load_testing_naiv_measurements/: 1621689952.872828.csv
dijkstra_algorithm/work_with_data/load_testing_mesurenets/load_testing_set_measurements/: 1621691961.3470256.csv
tests/: test_dijkstra_algorithm.py
tests/unit_tests/: test_naive_realization.py
unit_tests/: test_dijkstra_strategy.py  test_get_min_node.py  test_naive_dijkstra.py
work_with_data/: create_chart.py  generate_data.py  measure_time.py
