[tool.poetry]
name = "dijkstra-algorithm"
version = "0.1.0"
description = ""
authors = [
    "Ilnar Gomelyanov <hibushland@gmail.com>",
    "Danil Dmitriev <senses.dimit@gmail.com>",
    "Azat Khamzin <new.mail2018@mail.ru>",
    "Artyom Kholopov <temych.arkh@gmail.com>" 
]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.17.1"
pandas = "^1.2.4"
matplotlib = "^3.4.2"
click = "^8.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fucking-dijkstra = 'dijkstra_algorithm.main:main'
